<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Fixed Spans</string>

  <string name="text_0">Here\'s fixed spaced.</string>
  <string name="text_1">Based on \'W\' or \'M\'</string>
  <string name="text_2">Here\'s relative spaced.</string>
  <string name="text_3">So\'s this one</string>

  <string name="numeric_0">$29,011.11</string>
  <string name="numeric_1">$51.78</string>
  <string name="numeric_2">(555) 777-5555</string>
  <string name="numeric_3">(111) 111-1111</string>
  <string name="numeric_4">192.168.1.1</string>

  <string name="fade_0">Actionbar title here</string>
  <string name="justify_0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
