<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:padding="8dp"
    >
  <TextView
      android:id="@+id/mono_0"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_0"
      />
  <TextView
      android:id="@+id/mono_1"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_1"
      />
  <TextView
      android:id="@+id/mono_2"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_2"
      />
  <TextView
      android:id="@+id/mono_3"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_3"
      />

  <View
      android:layout_width="fill_parent"
      android:layout_height="48dp"
      />

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
      <TextView
          android:id="@+id/tabular_0"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_0"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/tabular_1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_1"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/tabular_2"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_2"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/tabular_3"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_3"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/tabular_4"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_4"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
      <TextView
          android:id="@+id/normal_0"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_0"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/normal_1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_1"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/normal_2"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_2"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/normal_3"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_3"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
      <TextView
          android:id="@+id/normal_4"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/numeric_4"
          android:textAppearance="@android:style/TextAppearance.Large"
          />
    </LinearLayout>

  </LinearLayout>

</LinearLayout>

